--- a/src/css/Transitions.css
+++ b/src/css/Transitions.css
@@ -1,8 +1,12 @@
 .alert {
-    animation: fadeout 4s;
+  animation: fadeout 4s;
 }
 
 @keyframes fadeout {
-    from { opacity: 1; }
-    to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
